Updated assets and CSS for backgrounds

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <!-- Title section -->
-        <section id="title" class="fs">
+        <section id="title" class="fs bg1">
             <h1 class="center">The Tortoise and the Hare</h1>
         </section>
         <!-- <script>
@@ -28,13 +28,13 @@
         </script> -->
 
         <!-- Scene 1 -->
-        <section id="page1" class="fs">
+        <section id="page1" class="fs bg2">
             <div class="box1 center slideInUp">
-                <img src="assets/hare.png" alt="" srcset="">
+                <img src="assets/hare-slide-2.png" alt="" srcset="">
             </div>
         </section>
 
-        <section id="page2" class="fs">
+        <section id="page2" class="fs bg3">
             <div class="box1 center slideInUp">
                 <p class="slideInUp" style="color:white;">test box!</p>
             </div>
