--- a/index.html
+++ b/index.html
@@ -3,40 +3,39 @@
     <head>
         <title>The Tortoise and the Hare</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
+        <link href="css/main.css" rel="stylesheet" >
         <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
         <script src="js/velocity.min.js"></script>
         <script src="js/TweenMax.min.js"></script>
         <script src="js/ScrollMagic.min.js"></script>
         <script src="js/plugins/animation.velocity.min.js"></script>
         <script src="js/plugins/animation.gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/plugins/TextPlugin.min.js"></script>
         <script src="js/plugins/debug.addIndicators.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </head>
 
     <body>
-        <!-- Title section -->
+        <!-- Scene 1 / Title -->
         <section id="title" class="fs bg1">
             <h1 class="center">The Tortoise and the Hare</h1>
         </section>
-        <!-- <script>
-            // create a scene
-            var scene = new ScrollMagic.Scene({duration: "100%"})
-            .setPin("#title")
-            .addTo(controller)
-            .addIndicators();
-        </script> -->
 
-        <!-- Scene 1 -->
+        <!-- Scene 2 -->
         <section id="page1" class="fs bg2">
-            <div class="box1 center slideInUp">
-                <img src="assets/hare-slide-2.png" alt="" srcset="">
+            <div class="fadeIn">
+                <h2>A hare was making fun of a tortoise one day for being so slow.</h2>
+                <div class="center">
+                    <img src="assets/hare-slide-2.png">
+                    <img src="assets/tortoise-slide-2.png">
+                </div>
             </div>
         </section>
 
+        <!-- Scene 3 -->
         <section id="page2" class="fs bg3">
-            <div class="box1 center slideInUp">
-                <p class="slideInUp" style="color:white;">test box!</p>
+            <div class="box1 center fadeIn">
+                <p class="fadeIn" style="color:white;">test box!</p>
             </div>
         </section>
 
@@ -44,10 +43,12 @@
             // init controller
             var controller = new ScrollMagic.Controller();
 
-            // get all triggers - headers of all 2 slides
+            // get all triggers - headers of all the pages
             var pages = ["#page1", "#page2"];
 
-            // SCENE 1
+            // ************* //
+            // ** SCENE 1 ** //
+            // ************* //
             // create scenes for each of the headers
             pages.forEach(function (page, index) {
                 
@@ -58,26 +59,46 @@
                 var pageScene = new ScrollMagic.Scene({
                     // duration: "50%",
                     triggerElement: page, // trigger CSS animation when header is in the middle of the viewport 
-                    offset: 200 // offset triggers the animation 95px earlier than middle of the viewport, adjust to your liking
+                    offset: 200 // offset triggers the animation 200px earlier than middle of the viewport, can be adjusted to liking
                 })
                 .setClassToggle('#page'+num, 'is-active') // set class to active slide
                 // .setPin(div)
                 .addIndicators() // add indicators (requires plugin), use for debugging
                 .addTo(controller);
             });
-            
-            // // create a scene
-            // new ScrollMagic.Scene({duration: "100%", triggerElement: "#page02"})
-            //     .setPin("#page02")
-            //     .addTo(controller)
-            //     .addIndicators();
-            // var slides = document.querySelectorAll("section.page");
-            // for (var i=0; i<slides.length; i++) {
-            //     new ScrollMagic.Scene({triggerElement: slides[i]})
-            //     .setPin(slides[i])
-            //     .addTo(controller)
-            //     .addIndicators();
-            // }
+
+            // ************* //
+            // ** Scene 2 ** //
+            // ************* //
+            // Pinning the first section and updating text
+            var pinScene01Tl = new TimelineMax();
+
+            pinScene01Tl
+                .to($('#page1 div.fadeIn h2'), 1.2, {autoAlpha: 0, ease:Power1.easeNone}, 1.5)
+                // .to($('#page1 div.fadeIn div.center'), 1.2, {autoAlpha: 0, ease:Power1.easeNone}, 1.5)
+                .set($('#page1 div.fadeIn h2'), {text: 'Text changes'})
+                .fromTo($('#page1 div.fadeIn h2'), 0.7, {y: '+=0'}, {y: 0, autoAlpha: 1, ease:Power1.easeOut}, '+=0.4')
+                // .fromTo($('#page1 div.fadeIn div.center'), 0.6, {y: '+=20'}, {y: 0, autoAlpha: 1, ease:Power1.easeOut}, '-=0.6')
+                // .set($('#page1 div.fadeIn h2'), {autoAlpha: 1}, '+=2');
+
+            var pinScene01 = new ScrollMagic.Scene({
+                triggerElement: '#page1', 
+                triggerHook: 0,
+                duration: "250%"
+            })
+            .setPin("#page1")
+            .setTween(pinScene01Tl)
+            .addTo(controller);
+
+            // Scene 3
+            var pinScene02 = new ScrollMagic.Scene({
+                triggerElement: '#page2', 
+                triggerHook: 0,
+                duration: "250%"
+            })
+            .setPin("#page2")
+            // .setTween(pinScene01Tl)
+            .addTo(controller);
         </script>
     </body>
 </html>
